# ZhC

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  ZhC开发路线图 1.xlsx  architecture.md  debug.json  debug_http_get.c  debug_http_post.c  debug_minimal.json  mypy.ini  pyproject.toml  test.debug.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/scripts/: ci-complexity.py  ci-coverage.py  ci-security-check.sh
.github/workflows/: ci.yml  release.yml
.workbuddy/: expert-history.json
.workbuddy/memory/: 2026-04-07.md  2026-04-08.md  MEMORY.md
cpp/: .gitignore  CMakeLists.txt
cpp/include/zhc/: AST.h  ASTContext.h  Common.h  DiagnosticKinds.def  Diagnostics.h  Driver.h  Keywords.h  Lexer.h  Parser.h  Preprocessor.h  Sema.h  SourceManager.h  Types.h  Unicode.h
cpp/lib/: AST.cpp  ASTContext.cpp  CMakeLists.txt  Common.cpp  Diagnostics.cpp  Driver.cpp  Keywords.cpp  Lexer.cpp  Parser.cpp  ParserDecl.cpp  ParserExpr.cpp  ParserStmt.cpp  ParserType.cpp  Preprocessor.cpp  Sema.cpp  SourceManager.cpp  TokenKinds.def  Unicode.cpp  fix_parser.py
cpp/test/: CMakeLists.txt
cpp/test/fixtures/: arrays.zhc  control_flow.zhc  enums.zhc  factorial.zhc  fibonacci.zhc  functions.zhc  hello.zhc  imports.zhc  pointers.zhc  structs.zhc
cpp/test/integration/: frontend_chinese_test.cpp  frontend_error_recovery_test.cpp  frontend_syntax_test.cpp
cpp/test/unittests/: lexer_test.cpp  parser_test.cpp  preprocessor_test.cpp  sema_test.cpp  unicode_test.cpp
cpp/tools/zhc/: CMakeLists.txt  main.cpp
docs/: API_IMPROVEMENT_PLAN.md  API_USAGE_EXAMPLES.md  ARCHITECTURE.md  DEBUG_GUIDE.md  GENERICS_DESIGN.md  LLVM_WASM_BACKEND_INTEGRATION_PLAN.md  LSP_GUIDE.md  MEETING_NOTES_2026_04_07.md  P0级语义分析修复完成报告.md  PERFORMANCE_BASELINE.md  PHASE2_TASK_PLAN.md  PHASE4_TASK_PLAN.md  PLAN_P1_tests_P2_refactor.md  Phase4_AST前端重构报告.md  Phase5_语义验证_执行计划.md  Phase5_语义验证开发报告.md  Phase6_高级分析与类型完善_执行计划.md  Phase7_IR中间表示与代码优化_执行计划.md  Phase7_IR中间表示与代码优化_执行计划_v2.md  Phase7_IR中间表示与代码优化_执行计划_v3.md  Phase8_IR多后端与插件系统规划.md  QUALITY_IMPROVEMENT_TASKS.md  QUICK_FIX_GUIDE.md  REGISTER_ALLOCATOR_GUIDE.md  REGISTER_ALLOCATOR_REFACTOR_PLAN.md  TEAM_TECH_IMPROVEMENT_PLAN.md  TECH_DEBT.md  WEEK5_PLAN.md  ZhC_Quality_Review_Report.md  benchmark_baseline.json  benchmark_optimized.json  今日开发总结_2026-04-03.md  遗留问题01泛型分析+泛型实例化.md
docs/IDE支持/: VSCode插件开发报告.md  VSCode插件语法高亮完善报告.md
docs/ZHC重写项目/: 00-执行摘要.md  00-报告目录.md  01-战略定位与愿景.md  02-重写价值分析.md  03-功能对比与差距分析.md  04-模块重写建议.md  05-模块功能修补建议.md  06-AI编程接入接口.md  07-AI可信执行监控层.md  08-可视化执行追踪层.md  09-模块废弃建议.md  10-C++重写技术路线.md  11-LLVM集成方案.md  12-项目规模与工时估算.md  13-风险评估与应对策略.md  14-多语言前端扩展.md  15-重构任务执行清单.md  16-技术债务清单.md  17-FAQ与外部质疑反驳.md  18-超越C的增强特性.md  Phase1-5专家优化分析报告.md  Phase1-开发任务清单.md  Phase1-进度检查报告.md  Phase2-开发任务清单.md  Phase3-开发任务清单.md  Phase4-开发任务清单.md  Phase5-开发任务清单.md  Phase6-开发任务清单.md  Phase7-开发任务清单.md
docs/archive/: 2026-04-08.md
docs/sphinx/: conf.py  index.rst
docs/优化计划/: Clang差距补充执行清单.md  优化提升执行清单 1.md
docs/功能开发清单/: 00-阅读开发规划文档，分析项目库相似或缺失的功能模块，依照文档制定开发任务列表，逐步执行。 .md  00-阅读开发规划文档，分析项目库相似或缺失的功能模块，依照文档制定开发任务列表，逐步执行。完成后提交 git .md  P0-字符串处理-ANSI转义序列.md  P0-字符串处理-x转义支持.md  P0-字符编码-中文字符串常量.md  P0-字符编码-字符编码转换.md  P0-预处理器-ifdef条件编译.md  P0-预处理器-include头文件.md  P1-类型系统-函数指针类型.md  P1-类型系统-宽字符类型wchar_t.md  P1-类型系统-数组类型增强.md  P1-错误处理-更友好的错误提示.md  P1-错误处理-更精确的错误定位.md  P2-LLVM-IR-数组索引GEP指令.md  P2-SIMD-SIMD指令生成.md  P2-代码生成-目标代码生成.md  P2-优化Pass-完整优化Pass集成.md  P2-调试支持-GDB_LLDB支持.md  P2-调试支持-断点变量调用栈.md  P4-包管理-包仓库集成.md  P4-包管理-包版本控制.md  P4-性能分析-性能剖析工具.md  P4-性能分析-热点分析.md  P4-文档生成-API文档自动生成.md  P4-测试框架-单元测试支持.md  P4-测试框架-测试断言库.md  P5-函数式-协程支持.md  P5-函数式-闭包支持.md  P5-反射-动态类型转换.md  P5-反射-类型信息查询.md  P5-反射-运行时类型检查.md  P5-异常处理-llvmlite-EH调研.md  P5-异常处理-异常类型系统.md  P5-类型系统-复数类型.md  P5-类型系统-定点数类型.md  P6-ARM-ARM架构支持.md  P6-GPU-GPU计算支持.md  P6-P7阶段任务总清单.md  P6-RISC-V-RISC-V目标代码生成.md  P6-WASM-WASI接口支持.md  (+7 more)
docs/增强功能/: 增强功能开发报告.md
docs/对比分析/: Clang功能对比分析报告.md  ZHC缺失功能清单.md
docs/工具链/: Tab补全开发报告.md  包管理器别名扩展开发报告.md  包管理器开发报告.md  包管理器语音支持开发报告.md
docs/开发者工具/: 开发者工具包.md
docs/性能优化/: P1级AST遍历性能优化报告.md  P1级增量AST更新报告.md  P1级并发编译优化报告.md  P2级函数级缓存报告.md
docs/标准库/: stdlib_math库开发报告.md  string库开发报告.md
docs/核心功能/: AST语义类型推导优化开发报告.md
docs/用户指南/: 模块系统使用指南.md  面向对象编程指南.md
docs/词法语法分析/: 词法语法分析器开发报告.md  语法分析器优化报告.md
docs/语义分析/: 测试验证报告.md  语义分析系统开发报告.md
docs/调试支持/: DWARF调试信息开发报告.md  GDB_LLDB集成开发报告.md
docs/重构/: 技术债务重构总结.md
docs/高级特性/: 字符串模板开发报告.md  泛型支持开发报告.md
editors/vscode/: language-configuration.json  package.json
examples/: README.md  array_enhancements.zhc  array_test_simple.zhc  classes.zhc  debug_example.zhc  functions.zhc  generic.zhc  hello.ll  hello.zhc  package_manager.zhc  template.zhc  terminal_animation  terminal_animation.c  terminal_animation.zhc
scripts/: build_docs.py  generate_changelog.py  performance_benchmark.py  pre-commit-check.sh  quality_check.py  quality_score.py  type_coverage_check.py  verify_toolchain.py
src/: __init__.py  __main__.py  cli.py  cli_parser.py  config.py  keywords.py
src/analysis/: __init__.py  analyzer_scheduler.py  ast_utils.py  base_analyzer.py  (+5 more)
tests/: conftest.py  integration_test.zhc  test_alias_analysis.py  test_analyzer_all_modules.py  test_array_types.py  test_ast_performance.py  test_ast_semantic_type.py  test_ast_validator.py  test_async_analyzer.py  test_async_codegen.py  test_async_lexer.py  test_backend_refactored.py  test_basic.c  test_basic.zhc  test_c_backend.py  test_c_codegen.py  test_cache_simple.py  test_chinese_string_constant.py  test_closure.py  test_codegen.py  test_codegen_c_codegen.py  test_codegen_integration.py  test_codegen_mappings.py  test_common_utils.py  test_compilation_performance_monitor.py  test_completer.py  test_complex_type.py  test_container.py  test_coverage.py  test_cross_platform.py  test_dataflow.py  test_debug.py  test_debug_event_driven.py  test_debug_generator.py  test_debug_info.py  test_debug_integration.py  test_debug_modules.py  test_doc.py  test_dominator.py  test_dynamic_cast.py  (+112 more)
(+689 files in other folders)
